<resources>
    <string name="app_name">Instafood</string>
    <string name="dish_details_made_title">Made it and loved it!</string>
    <string name="dish_details_pic_desc">Yummy picture of this dish</string>
    <string name="dish_details_sec_1">Ingredients</string>
    <string name="dish_details_sec_2">Instructions</string>
    <string name="dish_edit_btn">Edit</string>
    <string name="dish_make_version_btn">ReCreate this</string>
    <string name="dish_save_btn">Save</string>
    <string name="dish_add_btn">Serve!</string>
    <string name="dish_delete_btn">Delete</string>
    <string name="dish_list_frgmnt">To the feast</string>
    <string name="chef_frgmnt">See the Chef</string>
    <string name="chef_dishes">See dishes made by me!</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="application_title">INSTAFOOD</string>
    <string name="dish_name_hint">Chocolate chip cookies</string>
    <string name="dish_desc_hint">Found in my grandmas cabinet, this recipe turned so good!</string>
    <string name="dish_ing_hint">Flour /n
    spice /n
    everything nice</string>
    <string name="dish_inst_hint">Mix everything /n
    put in oven</string>
    <string name="dish_add_title">Add your own!</string>
    <string name="dish_add_photo_btn">Add a picture</string>
    <string name="chef_add_photo_btn">Add a picture</string>
    <string name="chef_name_hint">What is your name?</string>
    <string name="chef_desc_hint">Tell us a little about yourself</string>
</resources>