<?xml version="1.0" encoding="utf-8"?>

<!-- TODO: Update blank fragment layout -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dish_add_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".DishAddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_dish_add_const"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fragment_dish_add_image_iv"
            android:layout_width="330dp"
            android:layout_height="330dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/dish_details_pic_desc"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.369"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fragment_dish_add_dish_name_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/dish_name_hint"
            android:inputType="textShortMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_add_photo_btn" />

        <EditText
            android:id="@+id/fragment_dish_add_dish_desc_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:inputType="textLongMessage"
            android:hint="@string/dish_desc_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_add_dish_name_ev"
            android:autofillHints="" />

        <TextView
            android:id="@+id/fragment_dish_add_sec_1_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/dish_details_sec_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_add_dish_desc_ev" />

        <EditText
            android:id="@+id/fragment_dish_add_sec_1_eb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:inputType="textLongMessage"
            android:hint="@string/dish_ing_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_add_sec_1_lbl" />


        <TextView
            android:id="@+id/fragment_dish_add_sec_2_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/dish_details_sec_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_add_sec_1_eb" />

        <EditText
            android:id="@+id/fragment_dish_add_sec_2_eb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:inputType="textLongMessage"
            android:hint="@string/dish_inst_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_add_sec_2_lbl" />


        <Button
            android:id="@+id/fragment_dish_add_save_btn"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/dish_add_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_add_sec_2_eb" />

        <Button
            android:id="@+id/fragment_dish_add_photo_btn"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/dish_add_photo_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_add_image_iv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
