<?xml version="1.0" encoding="utf-8"?>

<!-- TODO: Update blank fragment layout -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dish_details_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".DishDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_dish_details_const"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/fragment_dish_details_photo_btn"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="@string/dish_add_photo_btn"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_details_image_iv" />

        <ImageView
            android:id="@+id/fragment_dish_details_image_iv"
            android:layout_width="330dp"
            android:layout_height="330dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/dish_details_pic_desc"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.369"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fragment_dish_details_dish_name_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_details_photo_btn" />

        <EditText
            android:id="@+id/fragment_dish_details_dish_desc_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:enabled="false"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_details_dish_name_ev" />

        <TextView
            android:id="@+id/fragment_dish_details_sec_1_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/dish_details_sec_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_details_dish_desc_ev" />

        <EditText
            android:id="@+id/fragment_dish_details_sec_1_eb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:enabled="false"
            android:inputType="textMultiLine"
            android:singleLine="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_details_sec_1_lbl" />


        <TextView
            android:id="@+id/fragment_dish_details_sec_2_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/dish_details_sec_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_details_sec_1_eb" />

        <EditText
            android:id="@+id/fragment_dish_details_sec_2_eb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:enabled="false"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_details_sec_2_lbl" />

        <Button
            android:id="@+id/fragment_dish_details_edit_btn"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/dish_edit_btn"
            android:clickable="false"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_details_sec_2_eb" />

        <Button
            android:id="@+id/fragment_dish_details_save_btn"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="false"
            android:text="@string/dish_save_btn"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fragment_dish_details_delete_btn"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_details_sec_2_eb"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/fragment_dish_details_delete_btn"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="false"
            android:text="@string/dish_delete_btn"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toEndOf="@+id/fragment_dish_details_edit_btn"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_details_sec_2_eb"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/fragment_dish_details_make_version_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/dish_make_version_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_details_image_iv" />

        <Button
            android:id="@+id/fragment_dish_details_chef_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            android:text="@string/chef_frgmnt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_dish_details_image_iv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
