<?xml version="1.0" encoding="utf-8"?>

<!-- TODO: Update blank fragment layout -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dish_details_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ChefDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_chef_details_const"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fragment_chef_details_image_iv"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:contentDescription="@string/dish_details_pic_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.369"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fragment_chef_details_chef_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="35dp"
            android:backgroundTint="#70AAA5"
            android:textColorHint="#CBE4E2"
            android:textColor="#7DBDB8"
            android:textStyle="bold"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_chef_details_add_photo_btn"
            />

        <EditText
            android:id="@+id/fragment_chef_details_chef_desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#70AAA5"
            android:enabled="false"
            android:textColor="#7DBDB8"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_chef_details_chef_name_tv" />

        <Button
            android:id="@+id/fragment_chef_details_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:clickable="false"
            android:backgroundTint="#CBE4E2"
            android:background="@drawable/buttoninapp"
            android:text="@string/dish_edit_btn"
            android:textColor="#7DBDB8"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_chef_details_chef_desc_tv" />

        <Button
            android:id="@+id/fragment_chef_details_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:text="@string/dish_save_btn"
            android:textColor="#7DBDB8"
            android:backgroundTint="#CBE4E2"
            android:background="@drawable/buttoninapp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_chef_details_chef_desc_tv" />

        <Button
            android:id="@+id/fragment_chef_details_see_dishes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#7DBDB8"
            android:backgroundTint="#CBE4E2"
            android:background="@drawable/buttoninapp"
            android:textStyle="bold"
            android:text="@string/chef_dishes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.819"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_chef_details_image_iv" />

        <Button
            android:id="@+id/fragment_chef_details_add_photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:textColor="#7DBDB8"
            android:textStyle="bold"
            android:backgroundTint="#CBE4E2"
            android:background="@drawable/buttoninapp"
            android:text="@string/chef_add_photo_btn"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/fragment_chef_details_chef_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.118"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_chef_details_image_iv"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
